modified:   public/index.html modified:   src/Components/AboutUscomponent.jsx modified:   src/Components/Contactform.jsx modified:   src/pages/Four04.jsx modified:   src/pages/products/GarudHarvester.jsx modified:   src/pages/products/GarudPlus.jsx deleted:    src/pages/products/GarudPoloRotaryTiller copy.jsx modified:   src/pages/products/GarudPoloRotaryTiller.jsx modified:   src/pages/products/GarudReverseForwardRotaryTiller.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="description"
       content="Shaan Agro - समजूतदार शेतकऱ्याची पहिली आवड. 2021 मध्ये स्थापन झालेल्या आव्हाड इंजिनिअरिंग....."
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Anek Devanagari", sans-serif;
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
